# patas-solidarias

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
adotar/: views.py
adotar/templates/: listar_pets.html
divulgar/: admin.py  models.py  urls.py  views.py
divulgar/migrations/: 0001_initial.py  0002_tag.py  0003_pet.py  0004_alter_pet_status.py
divulgar/templates/: novo_pet.html  seus_pets.html
patas_solidarias/: asgi.py  settings.py  urls.py  wsgi.py
templates/static/adotar/css/: listar_pets.css
templates/static/usuarios/css/: cadastro.css
usuarios/: urls.py  views.py
usuarios/migrations/: 0001_initial.py  0002_delete_raca.py
usuarios/templates/: cadastro.html  login.html  novo_pet.html
