[tool.poetry]
name = "patas_solidarias"
version = "0.1.0"
description = ""
authors = ["arturj <arturjardel9@gmail.com>"]
readme = "README.md"
packages = [{include = "patas_solidarias"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pillow = "^9.5.0"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
